# gametheory

./: .gitignore  Makefile  README.md  el_farol2.py  el_farol3.py  predictors2.py  pyproject.toml  repeated3.py  requirements.txt
docs/: game_definition.md  genai_declaration.md  report_outline.md
outputs/: repeated_players.csv  repeated_rounds.csv  repeated_summary.csv
src/: config.py  main.py
src/agents/: __init__.py  base.py  best_predictor_agent.py  epsilon_greedy_predictor_agent.py  fixed_attendance_agent.py  fixed_predictor_agent.py  nash_initialised_fixed_predictor_agent.py  predictor_agent.py  predictors.py  producer_agent.py  random_agent.py  recency_weighted_predictor_agent.py  score_updaters.py  softmax_predictor_agent.py  turnover_predictor_agent.py  virtual_payoff_predictor_agent.py
src/analysis/: benchmarks.py  equilibria.py  export.py  metrics.py  plot_predictor_bank_sweep.py  plots.py
src/experiments/: populations.py  run_case_study.py  run_fixed_predictor_baseline.py  run_heterogeneous.py  run_inductive.py  run_inductive_paired.py  run_predictor_bank_sweep.py  run_repeated_baselines.py  run_repeated_fixed_strategy.py  (+5 more)
tests/: conftest.py  test_advanced_agents.py  test_config.py  test_equilibria.py  test_fixed_predictor_agent.py  test_fixed_predictor_population.py  test_inductive_agents.py  test_math_consistency.py  test_metrics.py  test_payoff.py  test_populations.py  test_predictor_agent.py  test_predictors.py  test_repeated_game.py  test_score_updaters.py  test_static_game.py  test_static_probability_sweep.py  test_threshold_agents.py
(+3 files in other folders)
